--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
+	 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<title>MY Store | React</title>
 	<script src="https://kit.fontawesome.com/473d269aa9.js" crossorigin="anonymous"></script>
 	<link rel=“manifest” href="./manifest.json">
